--- a/scss/atomic-package/parts/_navigation_menu.scss
+++ b/scss/atomic-package/parts/_navigation_menu.scss
@@ -687,6 +687,7 @@ $navLofty: 50px;
 
 .navBar {
   @include clearfix;
+  position: relative;
   background: #f7f7f7;
   color: #666;
   border: 1px solid rgba(0,0,0,.1);
