--- a/docs/public/css/atomic-package.css
+++ b/docs/public/css/atomic-package.css
@@ -712,6 +712,11 @@ img.thumbnail.free.round {
 }
 
 /* Atomic */
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 300;
+}
+
+/* Atomic */
 h1.title {
   font-size: 28px;
   /* State  Size */
