--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -5947,15 +5947,15 @@ input[type="checkbox"] {
   width: 20px;
   height: 20px;
   border-radius: 2px;
-  border: #DCE4EC 2px solid;
-  background: #fff;
+  border: #D9D9D9 2px solid;
+  background: #F9F9F9;
   /* state */
   /* skin */
   /* size */
 }
 
 input[type="checkbox"]:checked {
-  background: #DCE4EC;
+  background: #D8D8D8;
 }
 
 input[type="checkbox"]:checked::before {
@@ -5978,6 +5978,7 @@ input[type="checkbox"]:disabled {
 
 input[type="checkbox"].primary {
   border: #2C3D50 2px solid;
+  background: #fff;
 }
 
 input[type="checkbox"].primary:checked {
@@ -5986,6 +5987,7 @@ input[type="checkbox"].primary:checked {
 
 input[type="checkbox"].green {
   border: #17BC9C 2px solid;
+  background: #fff;
 }
 
 input[type="checkbox"].green:checked {
@@ -5994,6 +5996,7 @@ input[type="checkbox"].green:checked {
 
 input[type="checkbox"].blue {
   border: #1397E1 2px solid;
+  background: #fff;
 }
 
 input[type="checkbox"].blue:checked {
@@ -6002,6 +6005,7 @@ input[type="checkbox"].blue:checked {
 
 input[type="checkbox"].orange {
   border: #F39C12 2px solid;
+  background: #fff;
 }
 
 input[type="checkbox"].orange:checked {
@@ -6010,6 +6014,7 @@ input[type="checkbox"].orange:checked {
 
 input[type="checkbox"].red {
   border: #E74C3C 2px solid;
+  background: #fff;
 }
 
 input[type="checkbox"].red:checked {
