refactor index text

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -28,7 +28,8 @@
 
         <h3 class="title big center docsTop">Features</h3>
 
-        <p class="text center large docsTop description">Atomic-PackageはあなたのHTML、CSS、およびJSコンポーネントの包括的なコレクションを提供します<br>
+        <p class="text center large docsTop description">Atomic-PackageはあなたのHTML、CSS、<br>
+          およびJavaScriptコンポーネントの包括的なコレクションを提供します。<br>
           これはカスタマイズが容易で拡張、使用するのは簡単です。</p>
 
         <ul class="pictureList">
