--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -1111,6 +1111,10 @@ img.thumbnail.free.round {
   border-bottom: #D9D9D9 1px solid;
 }
 
+.title.white {
+  color: #fff;
+}
+
 .title.primary {
   color: #2C3D50;
 }
@@ -1313,6 +1317,7 @@ h1.title, h2.title, h3.title, h4.title, h5.title, h6.title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 0 20px;
 }
 
 .menu .menuList > li a {
@@ -1325,6 +1330,7 @@ h1.title, h2.title, h3.title, h4.title, h5.title, h6.title {
 }
 
 .menu .menuList.right {
+  padding: 0;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end;
@@ -6718,25 +6724,27 @@ select.big {
 -------------------------------------------------- */
 /* Header Style
 -------------------------------------------------- */
-.header {
+header.header {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   min-height: 70px;
   padding: 0 30px;
   background: #F8F8F8;
+  /* Skin */
+  /* State */
 }
 
-.header::after {
+header.header::after {
   content: "";
   display: block;
   clear: both;
 }
 
-.header .headerLogo {
+header.header .headerLogo {
   height: 100%;
 }
 
-.header .headerLogo a {
+header.header .headerLogo a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -6746,7 +6754,7 @@ select.big {
   height: 100%;
 }
 
-.header > .box {
+header.header > .box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -6756,16 +6764,56 @@ select.big {
   min-height: 70px;
 }
 
-.header > .box.center {
+header.header > .box.center {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
 }
 
-.header > .box.center > * {
+header.header > .box.center > * {
   -webkit-box-flex: 0;
   -ms-flex: none;
   flex: none;
+}
+
+header.header.primary {
+  background: #2C3D50;
+}
+
+header.header.green {
+  background: #17BC9C;
+}
+
+header.header.blue {
+  background: #3598DB;
+}
+
+header.header.orange {
+  background: #F39C12;
+}
+
+header.header.red {
+  background: #E74C3C;
+}
+
+header.header.lower,
+header.header.lower > .box {
+  min-height: 40px;
+}
+
+header.header.low,
+header.header.low > .box {
+  min-height: 50px;
+}
+
+header.header.high,
+header.header.high > .box {
+  min-height: 120px;
+}
+
+header.header.lofty,
+header.header.lofty > .box {
+  min-height: 150px;
 }
 
 /* Footer Style
